--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@antv/data-set": "^0.10.1",
     "antd": "^3.11.6",
     "axios": "^0.18.0",
     "bizcharts": "^3.4.3",
