--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint-plugin-html": "^5.0.0"
+  }
 }
