--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "2.1.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
